[gd_scene load_steps=5 format=2]

[ext_resource path="res://Main.tscn" type="PackedScene" id=1]
[ext_resource path="res://CardUI/CardUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://temp/OptionContext.gd" type="Script" id=3]
[ext_resource path="res://assets/theme.tres" type="Theme" id=4]

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.545098, 0.545098, 0.545098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="viewport_container" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 128.0
margin_top = 72.0
margin_right = -128.0
margin_bottom = -72.0
mouse_filter = 2
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="viewport_container"]
size = Vector2( 2304, 1296 )
size_override_stretch = true
handle_input_locally = false
msaa = 4
disable_3d = true
usage = 0
render_target_update_mode = 3
physics_object_picking = true

[node name="Main" parent="viewport_container/Viewport" instance=ExtResource( 1 )]

[node name="CardUI" parent="." instance=ExtResource( 2 )]

[node name="Options" type="VBoxContainer" parent="."]
anchor_bottom = 1.0
margin_right = 300.0
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelContext" type="Label" parent="Options"]
margin_right = 300.0
margin_bottom = 49.0
text = "Click Context:"

[node name="OptionClick" type="OptionButton" parent="Options"]
margin_top = 53.0
margin_right = 300.0
margin_bottom = 102.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="space" type="Label" parent="Options"]
margin_top = 106.0
margin_right = 300.0
margin_bottom = 155.0

[node name="hboxDistance" type="HBoxContainer" parent="Options"]
margin_top = 159.0
margin_right = 300.0
margin_bottom = 208.0
mouse_filter = 2

[node name="Label" type="Label" parent="Options/hboxDistance"]
margin_right = 184.0
margin_bottom = 49.0
size_flags_horizontal = 3
text = "Distance: "

[node name="SpinBox" type="SpinBox" parent="Options/hboxDistance"]
margin_left = 188.0
margin_right = 300.0
margin_bottom = 49.0
mouse_filter = 2
max_value = 12.0
value = 2.0

[node name="space2" type="Label" parent="Options"]
margin_top = 212.0
margin_right = 300.0
margin_bottom = 261.0

[node name="LabelPath" type="Label" parent="Options"]
margin_top = 265.0
margin_right = 300.0
margin_bottom = 314.0
text = "Path Details:"

[node name="hboxPath" type="HBoxContainer" parent="Options"]
margin_top = 318.0
margin_right = 300.0
margin_bottom = 367.0
mouse_filter = 2

[node name="PathCheckWater" type="CheckButton" parent="Options/hboxPath"]
margin_right = 144.0
margin_bottom = 49.0
mouse_filter = 2
text = "Water?"
align = 2

[node name="PathSlider" type="HSlider" parent="Options/hboxPath"]
margin_left = 148.0
margin_right = 275.0
margin_bottom = 49.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 5.0
value = 1.0

[node name="Label" type="Label" parent="Options/hboxPath"]
margin_left = 279.0
margin_right = 300.0
margin_bottom = 49.0
text = "1"

[node name="space3" type="Label" parent="Options"]
margin_top = 371.0
margin_right = 300.0
margin_bottom = 420.0

[node name="LabelTarget" type="Label" parent="Options"]
margin_top = 424.0
margin_right = 300.0
margin_bottom = 473.0
text = "Target Details:"

[node name="hboxTarget" type="HBoxContainer" parent="Options"]
margin_top = 477.0
margin_right = 300.0
margin_bottom = 526.0
mouse_filter = 2

[node name="TargetCheckWater" type="CheckButton" parent="Options/hboxTarget"]
margin_right = 144.0
margin_bottom = 49.0
text = "Water?"
align = 2

[node name="TargetSlider" type="HSlider" parent="Options/hboxTarget"]
margin_left = 148.0
margin_right = 275.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 5.0
value = 1.0

[node name="Label" type="Label" parent="Options/hboxTarget"]
margin_left = 279.0
margin_right = 300.0
margin_bottom = 49.0
text = "1"

[connection signal="item_selected" from="Options/OptionClick" to="Options" method="_on_OptionClick_item_selected"]
[connection signal="value_changed" from="Options/hboxDistance/SpinBox" to="Options" method="_on_SpinBox_value_changed"]
[connection signal="toggled" from="Options/hboxPath/PathCheckWater" to="Options" method="_on_PathCheckWater_toggled"]
[connection signal="value_changed" from="Options/hboxPath/PathSlider" to="Options" method="_on_PathSlider_value_changed"]
[connection signal="toggled" from="Options/hboxTarget/TargetCheckWater" to="Options" method="_on_TargetCheckWater_toggled"]
[connection signal="value_changed" from="Options/hboxTarget/TargetSlider" to="Options" method="_on_TargetSlider_value_changed"]
